bmt-vaultwarden/bmt-vaultwarden_apps-v1_Deployment_vaultwarden.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: bmt-vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
      - env:
        - name: DB_PASS
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres-app
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: postgres-app
        - name: DATABASE_URL
          value: postgres://$(DB_USER):$(DB_PASS)@postgres-rw:5432/vaultwarden
        image: vaultwarden/server:1.32.0-alpine
        name: vaultwarden
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: vaultwarden-data
      volumes:
      - name: vaultwarden-data
        persistentVolumeClaim:
          claimName: vaultwarden-data
