bmt-vaultwarden/bmt-vaultwarden_v1_Service_vaultwarden.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: bmt-vaultwarden
spec:
  ports:
  - port: 80
  selector:
    app: vaultwarden
