bmt-vaultwarden/bmt-vaultwarden_networking.k8s.io-v1_Ingress_vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: vaultwarden-ingress
  namespace: bmt-vaultwarden
spec:
  rules:
  - host: bitwarden.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - bitwarden.berkeley.mt
    secretName: vaultwarden-ingress-tls
